--- a/Python/Dockerfile
+++ b/Python/Dockerfile
@@ -1,3 +1,4 @@
+# please specify required dependencies needed for your docker container to function properly with 'RUN' command 
 FROM python:3.12.0a4-bullseye
 RUN mkdir /app
 COPY getscript.py /app
